@@ -313,9 +313,20 @@ Redi.window.CreateUpdateRedirect = function(config) {
                     ,allowBlank: false
                 },{
                     xtype: 'redirector-combo-contextlist'
+                    ,id: 'redirector-createupdate-window-contextlist-' + this.ident
                     ,fieldLabel: _('redirector.context')
                     ,name: 'context_key'
                     ,anchor: '100%'
+                    ,listeners: {
+                        'select': {
+                            fn: function(cb, e) {
+                                var resourceList = Ext.getCmp('redirector-createupdate-window-resourcelist-' + this.ident);
+                                var s = resourceList.getStore();
+                                    s.baseParams.cntx = cb.getValue();
+                                    s.load();
+                            } ,scope: this
+                        }
+                    }
                 },{
                     layout: 'column'
                     ,border: false
@@ -339,9 +350,10 @@ Redi.window.CreateUpdateRedirect = function(config) {
                         ,defaults: { msgTarget: 'under' ,border: false }
                         ,items: [{
                             xtype: 'redirector-combo-resourcelist'
+                            ,id: 'redirector-createupdate-window-resourcelist-' + this.ident
                             ,fieldLabel: _('resource')
                             ,valueField: 'uri'
-                            ,fields: ['uri','pagetitle']
+                            ,fields: ['uri', 'pagetitle', 'url', 'context_key']
                             ,anchor: '100%'
                             ,listeners: {
                                 'select': {
